--- a/PerspectiveCorrection/PerspectiveCorrection.csproj
+++ b/PerspectiveCorrection/PerspectiveCorrection.csproj
@@ -100,6 +100,12 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\PolygonTools\VisualTools.csproj">
+      <Project>{9b18019d-83a7-4fb5-a52d-9c898113c871}</Project>
+      <Name>VisualTools</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
