Comenzada la implementación de las funcionalidades que faltaban. Se ha habilitado el uso de la segunda pista. Se han corregidos ciertos fallos del fichero con código CSound. Creado el sistema de manejo de las notas de cada pista. (TODO: Escritura de valor establecido).

--- a/CSoundBridgeTests/CSoundBridgeTests.csproj
+++ b/CSoundBridgeTests/CSoundBridgeTests.csproj
@@ -13,7 +13,7 @@
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
+    <PlatformTarget>x86</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -23,7 +23,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
+    <PlatformTarget>x86</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -68,6 +68,12 @@
     <Content Include="Files\Samples\kit1\snare.wav">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Sequencer\Sequencer.csproj">
+      <Project>{1f57aeaa-bbe2-4abb-bb35-c372cf3c878c}</Project>
+      <Name>Sequencer</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
